<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/both_match_style">
    <com.example.hxl.travel.widget.UnScrollViewPager
        android:id="@+id/vp_content"
        style="@style/both_match_style"
        android:background="@android:color/transparent"
        android:paddingBottom="45dp"/>
    <RadioGroup
        android:id="@+id/tab_rg_menu"
        style="@style/lmatch_hwrap_style"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/bottom_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:checked="true"
            android:drawableTop="@drawable/tab_01"
            android:text="@string/recommend" />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_02"
            android:text="@string/privilege" />

        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_03"
            android:text="@string/friend" />

        <RadioButton
            android:id="@+id/tab_rb_4"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_04"
            android:text="@string/mine" />

    </RadioGroup>
</RelativeLayout>
