<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/both_match_style">
    <RelativeLayout
        android:id="@+id/rl_dialog_add_group_nickname"
        style="@style/wmatch_hFifty_style">
        <Button
            android:text="@string/addGroup"
            android:drawableLeft="@mipmap/ic_friend_add_friend"
            android:drawablePadding="5dp"
            style="@style/dialogTitle"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_line_title_nick"
        android:layout_below="@+id/rl_dialog_add_group_nickname"
        style="@style/line_dialog"/>
    <RelativeLayout
        android:id="@+id/rl_dialog_add_group_name_edit"
        android:layout_below="@+id/view_line_title_nick"
        android:layout_marginTop="25dp"
        style="@style/wmatch_hFifty_style">
        <Button
            android:id="@+id/tv_dialog_add_group_name_edit"
            android:text="@string/groupName"
            android:drawableLeft="@mipmap/ic_nickname"
            android:drawablePadding="-20dp"
            style="@style/dialogBtnTitle"/>
        <EditText
            android:id="@+id/edit_dialog_add_group_name_edit"
            android:layout_toRightOf="@+id/tv_dialog_add_group_name_edit"
            android:inputType="text"
            android:hint="@string/groupNicknameAddHint"
            style="@style/dialogEditHint"/>
    </RelativeLayout>

    <View
        android:id="@+id/view_line_dialog_edit"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rl_dialog_add_group_name_edit"
        style="@style/line_dialog"/>
    <LinearLayout
        android:layout_below="@+id/view_line_dialog_edit"
        android:orientation="horizontal"
        style="@style/lmatch_hwrap_style">

        <Button
            android:id="@+id/btn_dialog_add_friend_cancel"
            android:text="@string/cancel"
            style="@style/dialogBtn"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/gray_light"/>
        <Button
            android:id="@+id/btn_dialog_add_friend_confirm"
            android:text="@string/confirm"
            style="@style/dialogBtn"/>
    </LinearLayout>
</RelativeLayout>