<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/both_match_style">
    <RelativeLayout
        android:id="@+id/rl"
        style="@style/backgroundTitle">
        <ImageView
            android:id="@+id/iv_activity_about_back"
            style="@style/backIcon" />
        <Button
            android:text="@string/aboutVersions"
            android:textSize="16sp"
            android:layout_alignTop="@+id/iv_activity_about_back"
            style="@style/titleBtn"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_activity_about_icon"
        android:layout_below="@+id/rl"
        android:layout_marginTop="35dp"
        style="@style/icon"/>
    <View
        android:id="@+id/view_line_icon"
        android:layout_below="@+id/iv_activity_about_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        style="@style/line" />
    <Button
        android:id="@+id/btn_activity_about_our"
        android:layout_below="@+id/view_line_icon"
        style="@style/settingBtn"
        android:text="@string/app_name" />
    <View
        android:id="@+id/view_line_our"
        android:layout_below="@+id/btn_activity_about_our"
        android:layout_marginLeft="5dp"
        style="@style/line" />
    <RelativeLayout
        android:id="@+id/rl_activity_about_version"
        android:layout_below="@+id/view_line_our"
        style="@style/wmatch_hFifty_style">
        <Button
            android:id="@+id/btn_activity_about_version"
            android:text="@string/version"
            style="@style/mineLeftBtn" />
        <Button
            android:id="@+id/btn_btn_activity_about_version_edit"
            android:layout_toRightOf="@+id/btn_activity_about_version"
            android:text="@string/versionCode"
            style="@style/mineRightBtn" />
    </RelativeLayout>
    <View
        android:id="@+id/view_line_version"
        android:layout_below="@+id/rl_activity_about_version"
        android:layout_marginLeft="5dp"
        style="@style/line" />
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/copyright"
        android:layout_centerHorizontal="true"
        style="@style/both_wrap_style"/>
</RelativeLayout>
