<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/both_match_style">
    <RelativeLayout
        android:id="@+id/rl_dialog_person_nickname"
        style="@style/wmatch_hFifty_style">
        <Button
            android:text="@string/modificationNick"
            style="@style/dialogTitle"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_line_title_nick"
        android:layout_below="@+id/rl_dialog_person_nickname"
        style="@style/line_dialog"/>
    <RelativeLayout
        android:id="@+id/rl_dialog_person_nickname_edit"
        android:layout_below="@+id/view_line_title_nick"
        android:layout_marginTop="50dp"
        style="@style/wmatch_hFifty_style">
        <Button
            android:id="@+id/tv_dialog_person_nickname_edit"
            android:text="@string/nickname"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@null"
            style="@style/both_wrap_style"/>
        <EditText
            android:id="@+id/edit_dialog_person_nickname_edit"
            android:layout_toRightOf="@+id/tv_dialog_person_nickname_edit"
            android:inputType="text"
            android:hint="@string/register_name_hint"
            android:textSize="13sp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            style="@style/lmatch_hwrap_style"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_line_dialog_edit"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/rl_dialog_person_nickname_edit"
        style="@style/line_dialog"/>
    <LinearLayout
        android:layout_below="@+id/view_line_dialog_edit"
        android:orientation="horizontal"
        style="@style/lmatch_hwrap_style">

        <Button
            android:id="@+id/btn_dialog_person_nickname_cancel"
            android:text="@string/cancel"
            style="@style/dialogBtn"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/gray_light"/>
        <Button
            android:id="@+id/btn_dialog_person_nickname_confirm"
            android:text="@string/confirm"
            style="@style/dialogBtn"/>
    </LinearLayout>
</RelativeLayout>
