<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/both_match_style">
    <RelativeLayout
        android:id="@+id/rl_dialog_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <Button
            android:text="@string/confirmClearCache"
            style="@style/dialogTitle" />
    </RelativeLayout>

    <View
        android:id="@+id/view_line_dialog"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rl_dialog_clear_cache"
        style="@style/line_dialog"/>
    <LinearLayout
        android:layout_below="@+id/view_line_dialog"
        android:orientation="horizontal"
        style="@style/lmatch_hwrap_style">

        <Button
            android:id="@+id/btn_dialog_clear_cache_cancel"
            android:text="@string/cancel"
            style="@style/dialogBtn"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/gray_light"/>
        <Button
            android:id="@+id/btn_dialog_clear_cache_confirm"
            android:text="@string/confirm"
            style="@style/dialogBtn"/>
    </LinearLayout>
</RelativeLayout>
